revert: missing survey endpoint