@@ -4,13 +4,11 @@ import com.hicct3.projectfinder.dto.application.*;
 import com.hicct3.projectfinder.dto.project.CreateProjectRequestDTO;
 import com.hicct3.projectfinder.dto.project.UpdateProjectRequestDTO;
 import com.hicct3.projectfinder.dto.project.UpdateProjectStatusRequestDTO;
-import com.hicct3.projectfinder.entity.Project;
-import com.hicct3.projectfinder.entity.ProjectApplication;
-import com.hicct3.projectfinder.entity.ProjectMember;
-import com.hicct3.projectfinder.entity.ProjectRecruitment;
+import com.hicct3.projectfinder.entity.*;
 import com.hicct3.projectfinder.entity.enums.ApplicationStatus;
 import com.hicct3.projectfinder.entity.enums.MemberStatus;
 import com.hicct3.projectfinder.entity.enums.ProjectStatus;
+import com.hicct3.projectfinder.entity.enums.QuestionType;
 import com.hicct3.projectfinder.entity.enums.Role;
 import com.hicct3.projectfinder.global.ErrorCode;
 import com.hicct3.projectfinder.global.GeneralException;
@@ -20,7 +18,9 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.util.List;
+import java.util.*;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -30,6 +30,8 @@ public class ProjectApplicationService {
     private final ProjectApplicationRepository projectApplicationRepository;
     private final ProjectMemberRepository projectMemberRepository;
     private final UserRepository userRepository;
+    private final ProjectQuestionRepository projectQuestionRepository;
+    private final ApplicationAnswerRepository applicationAnswerRepository;
 
     @Transactional
     public void updateApplicantStatus(Long userId, Long applicationId, UpdateApplicantStatusDTO dto)
@@ -67,7 +69,26 @@ public class ProjectApplicationService {
         if(!project.getAuthor().getUserId().equals(user.getUserId()))
             throw new GeneralException(ErrorCode.AUTHOR_MISMATCHED);
 
-        return ProjectApplicantsResponseDTO.of(projectApplicationRepository.findAllByProject(project).stream().map(x->ProjectApplicantResponseDTO.from(x, projectMemberRepository.findAllByUser(x.getUser()))).toList());
+        List<ProjectApplication> applications = projectApplicationRepository.findAllByProject(project);
+        List<ApplicationAnswer> answers = applications.isEmpty()
+                ? Collections.emptyList()
+                : applicationAnswerRepository.findAllByApplicationIn(applications);
+        Map<Long, List<AnswerResponseDTO>> answersByApplicationId = answers
+                .stream()
+                .sorted(Comparator.comparing(answer -> answer.getQuestion().getOrderIndex()))
+                .collect(Collectors.groupingBy(
+                        answer -> answer.getApplication().getId(),
+                        LinkedHashMap::new,
+                        Collectors.mapping(AnswerResponseDTO::from, Collectors.toList())
+                ));
+
+        return ProjectApplicantsResponseDTO.of(applications.stream()
+                .map(application -> ProjectApplicantResponseDTO.from(
+                        application,
+                        projectMemberRepository.findAllByUser(application.getUser()),
+                        answersByApplicationId.getOrDefault(application.getId(), Collections.emptyList())
+                ))
+                .toList());
     }
 
     @Transactional
@@ -86,6 +107,11 @@ public class ProjectApplicationService {
        if(projectApplicationRepository.existsByUserAndRecruitment(user, recruitment))
            throw new GeneralException(ErrorCode.ALREADY_APPLIED);
 
+       Map<ProjectQuestion, String> validatedAnswers = validateAnswers(
+               recruitment.getProject(),
+               req.getAnswers()
+       );
+
        ProjectApplication application = ProjectApplication.builder()
                .user(user)
                .recruitment(recruitment)
@@ -97,6 +123,16 @@ public class ProjectApplicationService {
        recruitment.setApplicantCount(recruitment.getApplicantCount() + 1);
 
        projectApplicationRepository.save(application);
+
+       if (!validatedAnswers.isEmpty()) {
+           applicationAnswerRepository.saveAll(validatedAnswers.entrySet().stream()
+                   .map(entry -> ApplicationAnswer.builder()
+                           .application(application)
+                           .question(entry.getKey())
+                           .answerText(entry.getValue())
+                           .build())
+                   .toList());
+       }
    }
 
    @Transactional
@@ -107,7 +143,78 @@ public class ProjectApplicationService {
            throw new GeneralException(ErrorCode.AUTHOR_MISMATCHED);
 
        application.getRecruitment().setApplicantCount(application.getRecruitment().getApplicantCount() - 1);
+       applicationAnswerRepository.deleteAllByApplication(application);
        projectApplicationRepository.delete(application);
    }
-}
 
+   private Map<ProjectQuestion, String> validateAnswers(
+           Project project,
+           List<AnswerRequestDTO> requests) {
+       List<ProjectQuestion> questions = projectQuestionRepository
+               .findAllByProjectAndDeletedAtIsNullOrderByIdAsc(project);
+       Map<Long, ProjectQuestion> questionsById = questions.stream()
+               .collect(Collectors.toMap(ProjectQuestion::getId, Function.identity()));
+       Map<ProjectQuestion, String> validatedAnswers = new LinkedHashMap<>();
+       Set<Long> answeredQuestionIds = new HashSet<>();
+
+       for (AnswerRequestDTO request : Optional.ofNullable(requests).orElseGet(Collections::emptyList)) {
+           if (!answeredQuestionIds.add(request.getQuestionId())) {
+               throw new GeneralException(ErrorCode.QUESTION_ANSWER_DUPLICATE);
+           }
+
+           ProjectQuestion question = Optional.ofNullable(questionsById.get(request.getQuestionId()))
+                   .orElseThrow(() -> new GeneralException(ErrorCode.QUESTION_NOT_FOUND));
+           validatedAnswers.put(question, validateAnswer(question, request.getAnswerText()));
+       }
+
+       boolean hasMissingRequiredAnswer = questions.stream()
+               .anyMatch(question -> Boolean.TRUE.equals(question.getRequired())
+                       && !answeredQuestionIds.contains(question.getId()));
+
+       if (hasMissingRequiredAnswer) {
+           throw new GeneralException(ErrorCode.QUESTION_ANSWER_REQUIRED);
+       }
+
+       return validatedAnswers;
+   }
+
+   private String validateAnswer(ProjectQuestion question, String answerText) {
+       String normalizedAnswer = answerText.trim();
+
+       if (question.getType() == QuestionType.TEXT) {
+           return normalizedAnswer;
+       }
+
+       if (question.getOptions() == null) {
+           throw new GeneralException(ErrorCode.INVALID_QUESTION_ANSWER);
+       }
+
+       List<String> options = Arrays.stream(question.getOptions().split(","))
+               .map(String::trim)
+               .filter(option -> !option.isEmpty())
+               .toList();
+
+       if (question.getType() == QuestionType.SINGLE_CHOICE) {
+           if (!options.contains(normalizedAnswer)) {
+               throw new GeneralException(ErrorCode.INVALID_QUESTION_ANSWER);
+           }
+           return normalizedAnswer;
+       }
+
+       List<String> selections = Arrays.stream(normalizedAnswer.split(","))
+               .map(String::trim)
+               .filter(selection -> !selection.isEmpty())
+               .toList();
+       Set<String> distinctSelections = new LinkedHashSet<>(selections);
+
+       if (distinctSelections.isEmpty()
+               || distinctSelections.size() != selections.size()
+               || !options.containsAll(distinctSelections)) {
+           throw new GeneralException(ErrorCode.INVALID_QUESTION_ANSWER);
+       }
+
+       return options.stream()
+               .filter(distinctSelections::contains)
+               .collect(Collectors.joining(","));
+   }
+}
